Fix aligning in content pages update link to tuderechoasaber.es

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -29,6 +29,11 @@ a { color: #36a3d3}
 
 
 .content {  width: 882px; margin: auto}
+.content:after {
+  content:"";
+  display:table;
+  clear:both;
+}
 .rounded { border-radius: 20px; border: 1px solid; padding:5px 20px;
   transition-property: all;
   transition-duration: 0.1s;
@@ -343,4 +348,10 @@ footer {
 .g-recaptcha {
   float: right;
   margin-right: -1px;
+}
+
+#left_column_flip {
+  float: left;
+  width: 66.66666666%;
+  padding-left: 20px;
 }
